Fix layout problem with calendar feed dates in FireFox
The original style that was originally adapted from an older version of the admissions website is based on ideosyncratic web browser behavior that FireFox has apparently resolved. Go with this temporary fix until a permantent solution can be developed.

--- a/events-calendar.less
+++ b/events-calendar.less
@@ -418,7 +418,7 @@
 			}
 			&:before {
 				background: #717171;
-				height: 24px;
+				bottom: 0;
 				top: 0;
 			}
 			&:after {
